Add actors and shop section

--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
             <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="#features" class="nav-link">Features</a></li>
             <li class="nav-item"><a href="#actors" class="nav-link">Our Actors</a></li>
-            <li class="nav-item"><a href="#mission" class="nav-link">Mission</a></li>
+            <li class="nav-item"><a href="#shop" class="nav-link">Shop</a></li>
             <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
         </ul>
     </nav>
 
     <!-- Featured shows -->
-    <section class="featured-section" id="features">
+    <section class="featured-section">
         <div class="banner-container">
             <div class="banner-img-container">
                 <img src="static/images/theater-image-background.png" alt="Shadows of performers projected on stage" class="background-featured">
             </div>
             <h1 class="section-title">Featured Shows</h1>
         </div>
-        <div class="shows-section">
+        <div class="shows-section" id="features">
             <div class="shows-container">
                 <div class="shows-header">April 2020</div>
                 <div class="show-specifics">
@@ -80,8 +80,104 @@
         </div>
     </section>
 
+    <!-- Actors -->
+    <section id="actors">
+        <div class="actors-header">
+            <h2>Our Actors</h2>
+        </div>
+        <div class="actors-wrapper-container">
+            <div class="actors-wrapper">
+                <div class="actor-box">
+                    <div class="actor-img-container">
+                        <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="actor-img">
+                    </div>
+                    <div class="actor-name">Kallisto Harith</div>
+                    <div class="actor-summary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit nulla unde a, repellat reiciendis exercitationem enim quidem non maiores quibusdam.</div>
+                </div>
+                <div class="actor-box">
+                    <div class="actor-img-container">
+                        <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="actor-img">
+                    </div>
+                    <div class="actor-name">Farhan Dragoslav</div>
+                    <div class="actor-summary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus magnam, vero quo assumenda omnis, tempore inventore natus labore aperiam veniam voluptatibus placeat eveniet culpa odio.</div>
+                </div>
+                <div class="actor-box">
+                    <div class="actor-img-container">
+                        <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="actor-img">
+                    </div>
+                    <div class="actor-name">Zerach Matías</div>
+                    <div class="actor-summary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid, ipsum quo exercitationem officia rerum cupiditate earum minima corrupti accusamus non voluptatum animi ex eum consequuntur quaerat dolor, pariatur eos sit.</div>
+                </div>
+                <div class="actor-box">
+                    <div class="actor-img-container">
+                        <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="actor-img">
+                    </div>
+                    <div class="actor-name">Krysten Armando</div>
+                    <div class="actor-summary">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus temporibus fuga quo vitae, est consequatur.</div>
+                </div>
+                <div class="actor-box">
+                    <div class="actor-img-container">
+                        <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="actor-img">
+                    </div>
+                    <div class="actor-name">Gerard Theodoar</div>
+                    <div class="actor-summary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit cum ab fugit optio labore amet.</div>
+                </div>
+                <div class="actor-box">
+                    <div class="actor-img-container">
+                        <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="actor-img">
+                    </div>
+                    <div class="actor-name">Severo Tolya</div>
+                    <div class="actor-summary">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto illum totam, quisquam soluta ipsam corporis blanditiis cupiditate facere dolorum iste.</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Shop -->
+    <section id="shop">
+        <div class="shop-header">
+            <h2>Shop</h2>
+        </div>
+        <div class="shop-wrapper-container">
+            <div class="shop-wrapper">
+                <div class="shop-box">
+                    <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="shop-img">
+                    <div class="shop-item-name">Ticket to any show</div>
+                </div>
+                <div class="shop-box">
+                    <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="shop-img">
+                    <div class="shop-item-name">Ticket to any show</div>
+                </div>
+                <div class="shop-box">
+                    <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="shop-img">
+                    <div class="shop-item-name">Ticket to any show</div>
+                </div>
+                <div class="shop-box">
+                    <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="shop-img">
+                    <div class="shop-item-name">Ticket to any show</div>
+                </div>
+                <div class="shop-box">
+                    <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="shop-img">
+                    <div class="shop-item-name">Ticket to any show</div>
+                </div>
+                <div class="shop-box">
+                    <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="shop-img">
+                    <div class="shop-item-name">Ticket to any show</div>
+                </div>
+                <div class="shop-box">
+                    <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="shop-img">
+                    <div class="shop-item-name">Ticket to any show</div>
+                </div>
+                <div class="shop-box">
+                    <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="shop-img">
+                    <div class="shop-item-name">Ticket to any show</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
-    <footer>
+    <footer id="contact">
         <div class="map-container">
             <img src="static/images/chicago map screenshot.png" alt="Map" class="map-img">
         </div>
