Add actor and shop images, resize image cards

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="An actor with both hands towards the audience and a child watching him in the background" class="show-image">
                     <div class="show-description">
                         <div class="show-title">A Raisin In The Sun</div>
-                        <div class="show-date">April 6, 2020 - march 12, 2021</div>
+                        <div class="show-date">April 6, 2020 - April 12, 2020</div>
                         <div class="show-location">Griot Theater, 233 State St., Chicago, IL</div>
                         <div class="show-price">$75</div>
                     </div>
@@ -48,7 +48,7 @@
                     <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="An actor with both hands towards the audience and a child watching him in the background" class="show-image">
                     <div class="show-description">
                         <div class="show-title">A Raisin In The Sun</div>
-                        <div class="show-date">April 6, 2020 - march 12, 2021</div>
+                        <div class="show-date">April 13, 2020 - April 19, 2020</div>
                         <div class="show-location">Griot Theater, 233 State St., Chicago, IL</div>
                         <div class="show-price">$75</div>
                     </div>
@@ -59,7 +59,7 @@
                     <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="An actor with both hands towards the audience and a child watching him in the background" class="show-image">
                     <div class="show-description">
                         <div class="show-title">A Raisin In The Sun</div>
-                        <div class="show-date">April 6, 2020 - march 12, 2021</div>
+                        <div class="show-date">April 20, 2020 - April 26, 2020</div>
                         <div class="show-location">Griot Theater, 233 State St., Chicago, IL</div>
                         <div class="show-price">$75</div>
                     </div>
@@ -70,7 +70,7 @@
                     <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="An actor with both hands towards the audience and a child watching him in the background" class="show-image">
                     <div class="show-description">
                         <div class="show-title">A Raisin In The Sun</div>
-                        <div class="show-date">April 6, 2020 - march 12, 2021</div>
+                        <div class="show-date">April 27, 2020 - May 3, 2020</div>
                         <div class="show-location">Griot Theater, 233 State St., Chicago, IL</div>
                         <div class="show-price">$75</div>
                     </div>
@@ -89,42 +89,42 @@
             <div class="actors-wrapper">
                 <div class="actor-box">
                     <div class="actor-img-container">
-                        <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="actor-img">
+                        <img src="static/images/actors/michael-dam-mEZ3PoFGs_k-unsplash.jpg" alt="Lady smiling" class="actor-img">
                     </div>
-                    <div class="actor-name">Kallisto Harith</div>
+                    <div class="actor-name">Kallista Harith</div>
                     <div class="actor-summary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit nulla unde a, repellat reiciendis exercitationem enim quidem non maiores quibusdam.</div>
                 </div>
                 <div class="actor-box">
                     <div class="actor-img-container">
-                        <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="actor-img">
+                        <img src="static/images/actors/robert-godwin-cdksyTqEXzo-unsplash.jpg" alt="Man with glasses" class="actor-img">
                     </div>
                     <div class="actor-name">Farhan Dragoslav</div>
                     <div class="actor-summary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus magnam, vero quo assumenda omnis, tempore inventore natus labore aperiam veniam voluptatibus placeat eveniet culpa odio.</div>
                 </div>
                 <div class="actor-box">
                     <div class="actor-img-container">
-                        <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="actor-img">
+                        <img src="static/images/actors/albert-dera-ILip77SbmOE-unsplash.jpg" alt="Portrait of man" class="actor-img">
                     </div>
                     <div class="actor-name">Zerach Matías</div>
                     <div class="actor-summary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid, ipsum quo exercitationem officia rerum cupiditate earum minima corrupti accusamus non voluptatum animi ex eum consequuntur quaerat dolor, pariatur eos sit.</div>
                 </div>
                 <div class="actor-box">
                     <div class="actor-img-container">
-                        <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="actor-img">
+                        <img src="static/images/actors/christopher-campbell-rDEOVtE7vOs-unsplash.jpg" alt="Portrait of woman" class="actor-img">
                     </div>
                     <div class="actor-name">Krysten Armando</div>
                     <div class="actor-summary">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus temporibus fuga quo vitae, est consequatur.</div>
                 </div>
                 <div class="actor-box">
                     <div class="actor-img-container">
-                        <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="actor-img">
+                        <img src="static/images/actors/philip-martin-5aGUyCW_PJw-unsplash.jpg" alt="Man, crossed arm and looking to the side" class="actor-img">
                     </div>
                     <div class="actor-name">Gerard Theodoar</div>
                     <div class="actor-summary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit cum ab fugit optio labore amet.</div>
                 </div>
                 <div class="actor-box">
                     <div class="actor-img-container">
-                        <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="actor-img">
+                        <img src="static/images/actors/jurica-koletic-7YVZYZeITc8-unsplash.jpg" alt="Man smiling" class="actor-img">
                     </div>
                     <div class="actor-name">Severo Tolya</div>
                     <div class="actor-summary">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto illum totam, quisquam soluta ipsam corporis blanditiis cupiditate facere dolorum iste.</div>
@@ -141,36 +141,36 @@
         <div class="shop-wrapper-container">
             <div class="shop-wrapper">
                 <div class="shop-box">
-                    <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="shop-img">
-                    <div class="shop-item-name">Ticket to any show</div>
+                    <img src="static/images/shop/andy-li-A_dJOYpxEVU-unsplash.jpg" alt="A bunch of show tickets" class="shop-img">
+                    <div class="shop-item-name">10 x Tickets to any show</div>
                 </div>
                 <div class="shop-box">
-                    <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="shop-img">
-                    <div class="shop-item-name">Ticket to any show</div>
+                    <img src="static/images/shop/charlesdeluvio-AQRp2NH-O8k-unsplash.jpg" alt="Dog wearing a beanie" class="shop-img">
+                    <div class="shop-item-name">Beanie for your dog</div>
                 </div>
                 <div class="shop-box">
-                    <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="shop-img">
-                    <div class="shop-item-name">Ticket to any show</div>
+                    <img src="static/images/shop/ryan-hoffman-6Nub980bI3I-unsplash.jpg" alt="T-shirt" class="shop-img">
+                    <div class="shop-item-name">T-shirt</div>
                 </div>
                 <div class="shop-box">
-                    <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="shop-img">
-                    <div class="shop-item-name">Ticket to any show</div>
+                    <img src="static/images/shop/ekaterina-brycheva-APkKDd_9jic-unsplash.jpg" alt="A pair of socks" class="shop-img">
+                    <div class="shop-item-name">Socks</div>
                 </div>
                 <div class="shop-box">
-                    <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="shop-img">
-                    <div class="shop-item-name">Ticket to any show</div>
+                    <img src="static/images/shop/drake-s-takes-vKnRYW-mtek-unsplash.jpg" alt="A man wearing round sunglasses" class="shop-img">
+                    <div class="shop-item-name">Sunglasses</div>
                 </div>
                 <div class="shop-box">
-                    <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="shop-img">
-                    <div class="shop-item-name">Ticket to any show</div>
+                    <img src="static/images/shop/john-forson-cmQ13SkCZmc-unsplash.jpg" alt="Mug" class="shop-img">
+                    <div class="shop-item-name">Mug</div>
                 </div>
                 <div class="shop-box">
-                    <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="shop-img">
-                    <div class="shop-item-name">Ticket to any show</div>
+                    <img src="static/images/shop/florian-klauer-DUOTbkFqvFw-unsplash.jpg" alt="2 pens" class="shop-img">
+                    <div class="shop-item-name">Pen</div>
                 </div>
                 <div class="shop-box">
-                    <img src="static/images/a-raisin-in-the-sun-theater-1.png" alt="" class="shop-img">
-                    <div class="shop-item-name">Ticket to any show</div>
+                    <img src="static/images/shop/dekler-ph-f95xpfx6UZ8-unsplash.jpg" alt="Lady wearing a straw hat" class="shop-img">
+                    <div class="shop-item-name">Branded straw hat</div>
                 </div>
             </div>
         </div>
